More notes to MI.tex no real text yet

--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -49,10 +49,45 @@ Questions needed to be considered when given a problem:
 - how can the agent compute an output that can be interpreted as a solution to
 the problem? what about worst and average cases?
 
+Much work in AI is motivated by commonsense reasoning
 
- -------- ---------
+there are 4 common classes of solutions, they are not exclusive:
+- optimal solutions
+- satisficing solution --> satisfying + sufficient
+- approximate optimal solutions
+- probable solution
 
-Reasoning under uncertainty
+ -------- Dimensions of complexity ---------
+Modularity:
+flat - modular - hierachical
 
-agent and agency
-knowledge representation
+Representation scheme:
+States - features - relations -propositition
+
+Planning Horizon:
+non-planning - finite horizon - indefinite horizon - infinite horizon
+
+Uncertainty:
+- Sensing uncertainty:
++ Fully observable
++ Partially observable
+
+- Effect uncertainty:
++ Deterministic
++ Stochastic
+
+Preference:
+- goals are either achivement goals or maintenance goals
+- complex preferences, ordinal preference, cardinal preference
+
+Number of agents:
+- single agent
+- multiple agents
+
+Learning:
+- Knowledge is given
+- knowledge is learned
+
+Computational limits:
+- Perfect rationality
+- bounded rationality
