--- a/sections/Testing/Testing.tex
+++ b/sections/Testing/Testing.tex
@@ -55,7 +55,25 @@ Test Num:                     & 2      \\ \hline
 
 \subsection{Results: Test 2}
 This test had the turret set the angle as an offset based on the previously set
-angle. Below will be presented the data from data set 2.
+angle. Below will be presented the data from data set 4.
 The rest of the data can be found in \autoref{}. 
 
-
+\begin{table}[]
+\centering
+\begin{tabular}{ll}
+Test Num:                     & 4      \\ \hline
+\multicolumn{1}{l|}{Expected} & Actual \\ \hline
+\multicolumn{1}{l|}{7}        & 7     \\
+\multicolumn{1}{l|}{14}       & 13     \\
+\multicolumn{1}{l|}{21}       & 20     \\
+\multicolumn{1}{l|}{28}       & 28     \\
+\multicolumn{1}{l|}{35}       & 34     \\
+\multicolumn{1}{l|}{42}       & 40     \\
+\multicolumn{1}{l|}{49}       & 48     \\
+\multicolumn{1}{l|}{56}       & 56     \\
+\multicolumn{1}{l|}{63}       & 64     \\
+\multicolumn{1}{l|}{70}       & 75    
+\end{tabular}
+\caption{Results from data set 4.}
+\label{AngleTest1Result}
+\end{table}
