--- a/sections/HWSelection/Sensors/SensorTest.tex
+++ b/sections/HWSelection/Sensors/SensorTest.tex
@@ -6,7 +6,7 @@ sensors will also be used to find out how precise they are.\nl
 First the testing methodology will be explained, then this methodology
 will be used to devise tests for the different sensors. 
 
-\subsection{Testing Methodology}
+\subsection{Testing Methodology}\label{hej}
 The testing will be divided into to two parts, one part is testing the two
 distance sensors and the second part is testing the camera. 
 
@@ -16,17 +16,10 @@ difference between the experiments are the size of the object being tracked and
 whether the sensor is shielded or not. The different object sizes was tested
 with a shielded sensor and a non shielded sensor. \nl
 
-\begin{figure}
-\centering
-\begin{tikzpicture}
-  \begin{axis}[xlabel={Measured distance}, ylabel={Actual distance}, xmin=0,
-  ymin=0, minor tick num = 3, /pgfplots/grid = both, axis lines = left] 
-  \addplot[green, mark=*] table {graphData/sensorShielded1.dat};
-  \addplot[blue, mark=*] table {graphData/sensorShielded3.dat};
-  \end{axis} 
-\end{tikzpicture}
-\caption{Results with a shielded sensor and a box h. 14.2cm and w. 9cm}
-\end{figure}
+\graph{Measured distance}{Actual distance
+}{sensorShielded1,sensorShielded3}{Results
+with a shielded sensor and a box h.
+14.2cm and w. 9cm}{shieldedtest}
 
 This sensor has a range of 0 to 255 cm and will not be too limiting in terms of
 how far the object can be from the canon. 
