--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -91,3 +91,17 @@ Learning:
 Computational limits:
 - Perfect rationality
 - bounded rationality
+
+------- Reasoning under uncertainty (ch6)-------
+propability as a measure of belief is Bayesian propability/subjective
+propability.
+
+
+
+
+
+
+
+
+
+
