Improved the say command with italic

--- a/setup/macros.tex
+++ b/setup/macros.tex
@@ -97,7 +97,7 @@
 \newcommand{\name}{BTR\
 }
 
-\newcommand{\say}[1]{``#1''}
+\newcommand{\say}[1]{\textit{``#1''}} 
 
 \newcommand{\names}{BTRs\
 }
