--- a/sections/PhysTheory/CalculatingOffset.tex
+++ b/sections/PhysTheory/CalculatingOffset.tex
@@ -9,4 +9,8 @@ derived in \autoref{ProjMotion}. By first using \autoref{FinEq} to calculate the
 distance to the target and then inputting that into \autoref{FinEq} to get the
 air time for the projectile, it is possible to calculate the distance the target
 has travelled in the time it takes the projectile to get to it, simply by
-multiplying the air time with the velocity of the target.
+multiplying the air time with the velocity of the target. With this information
+it is then possible to use pythagoras theorem to calculate the length from the
+turret to the current position of the target. All of this can be used together
+with the cosine relation to calculate how much the turret should turn to be able
+to hit the target.
