Update bib file and RTS skeleton

--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -12,3 +12,13 @@
   journal={Department of Computer Science and Engineering University of California},
   year={1999}
 }
+@book{daintith2008dictionary,
+  title={A Dictionary of Computing},
+  author={Daintith, J. and Wright, E.},
+  isbn={9780199234004},
+  lccn={2008030048},
+  series={Oxford Paperback Reference},
+  url={https://books.google.dk/books?id=njMKvgAACAAJ},
+  year={2008},
+  publisher={OUP Oxford}
+}
