--- a/sections/Analyse/SystemDescription/RTS.tex
+++ b/sections/Analyse/SystemDescription/RTS.tex
@@ -3,9 +3,9 @@ Although the project group doesn't have any members following the RTS course, th
 still incorporates certain elements from RTS. In this section these elements will be described
 in order to provide a basic understanding in relation to the project.
 \subsection{definition}
-The Oxford Dictionary of Computing defines a real-time system as such \say{Any system in which the time at which output is produced is significant. This is usually because the input corresponds to some movement in the physical world, and the output has to relate to that same movement. The lag from input time to output time must be sufficiently small for acceptable timeliness. Timeliness is a function of the total system: missile guidance requires output within a few milliseconds of input whereas scheduling of steamships requires responses measured in days. Real-time systems are usually considered to be those in which the response time is of order milliseconds; interactive systems are those with response times of order seconds and batch systems are those with response times of hours or days. Real-time systems may be subdivided into hard and soft, depending on the severity of failure to meet a deadline for output.}
+The Oxford Dictionary of Computing\citep{daintith2008dictionary} defines a real-time system as such \say{Any system in which the time at which output is produced is significant. This is usually because the input corresponds to some movement in the physical world, and the output has to relate to that same movement. The lag from input time to output time must be sufficiently small for acceptable timeliness. Timeliness is a function of the total system: missile guidance requires output within a few milliseconds of input whereas scheduling of steamships requires responses measured in days. Real-time systems are usually considered to be those in which the response time is of order milliseconds; interactive systems are those with response times of order seconds and batch systems are those with response times of hours or days. Real-time systems may be subdivided into hard and soft, depending on the severity of failure to meet a deadline for output.}
 \subsection{Scheduling}
-
+The art of scheduling - a progressive self-help book by a midget in a mankini surfing the rush-hour waves in downtown san francisco
 \subsection{deadlines}
 
 \subsection{tasks}
