- Added the rest of the ultrasonic sensor test - Added a graphL macro which has a legend - Added more graphs to SensorTest.tex

--- a/sections/HWSelection/Sensors/SensorTest.tex
+++ b/sections/HWSelection/Sensors/SensorTest.tex
@@ -16,10 +16,23 @@ difference between the experiments are the size of the object being tracked and
 whether the sensor is shielded or not. The different object sizes was tested
 with a shielded sensor and a non shielded sensor. \nl
 
-\graph{Measured distance}{Actual distance
-}{sensorShielded1,sensorShielded3}{Results
-with a shielded sensor and a box h.
-14.2cm and w. 9cm}{shieldedtest}
+\graphL{Measured distance [cm]}{Actual distance
+[cm]}{shieldedBoxStanding,shieldedBoxLandscape}{Box Standing, Box
+Landscape}{Results with a shielded sensor and a box h.
+14.2cm and w. 9cm}{shieldedTestBox}
+
+\graphL{Measured distance [cm]}{Actual distance
+[cm]}{unshieldedBoxStanding,unshieldedBoxLandscape}{Box Standing, Box
+Landscape}{Results with a unshielded sensor and a box h.
+14.2cm and w. 9cm}{unshieldedTestBox}
+
+\graphL{Measured distance [cm]}{Actual distance
+[cm]}{shieldedPaperStanding,shieldedPaperLandscape}{Paper Standing, Paper
+Landscape}{Results with a shielded sensor and a A3 Paper}{shieldedTestPaper}
+
+\graphL{Measured distance [cm]}{Actual distance
+[cm]}{unshieldedPaperStanding,unshieldedPaperLandscape}{Paper Standing, Paper
+Landscape}{Results with a unshielded sensor and a A3 Paper}{unshieldedTestPaper}
 
 This sensor has a range of 0 to 255 cm and will not be too limiting in terms of
 how far the object can be from the canon. 
