--- a/setup/macros.tex
+++ b/setup/macros.tex
@@ -261,7 +261,7 @@ rettes} \autopageref{retRefMacro}\\}
 \begin{graphFloat}
 \centering
 \begin{tikzpicture}
-	\begin{axis}[xlabel={$#1$}, ylabel={$#2$}, ylabel style={rotate=270}, xmin=0,
+	\begin{axis}[xlabel={#1}, ylabel={#2}, xmin=0,
 	ymin=0, minor tick num = 3, /pgfplots/grid = both, axis lines = left] 
 	\forcsvlist{\ap}{#3}
 	\end{axis}
@@ -272,8 +272,26 @@ rettes} \autopageref{retRefMacro}\\}
 \end{graphEnv}
 }
 
+\newcommand{\graphL}[6]{%
+\begin{graphEnv}
+\begin{graphFloat}
+\centering
+\begin{tikzpicture}
+	\begin{axis}[xlabel={#1}, ylabel={#2}, xmin=0,
+	ymin=0, minor tick num = 3, /pgfplots/grid = both, axis lines = left,legend
+	style={ at={(1.3,0.5)}, anchor=center},] 
+	\forcsvlist{\ap}{#3}
+	\forcsvlist{\al}{#4}
+	\end{axis}
+\end{tikzpicture}
+\caption{#5}
+\end{graphFloat}
+\label{graph:#6}
+\end{graphEnv}
+}
 
 \newcommand{\ap}[1]{\addplot table {graphData/#1.dat};}
+\newcommand{\al}[1]{\addlegendentry{#1}}
 
 \newcounter{def}
 \renewcommand{\thedef}{definition \thechapter.\arabic{def}}
