--- a/sections/HWSelection/Sensors/SensorTest.tex
+++ b/sections/HWSelection/Sensors/SensorTest.tex
@@ -35,7 +35,12 @@ Landscape}{Results with a shielded sensor and a A3 Paper}{shieldedTestPaper}
 Landscape}{Results with a unshielded sensor and a A3 Paper}{unshieldedTestPaper}
 
 This sensor has a range of 0 to 255 cm and will not be too limiting in terms of
-how far the object can be from the canon. 
+how far the object can be from the canon for it to hit the object.\nl
+
+As seen in \autoref{graph:shieldedTestBox}, \autoref{graph:unshieldedTestBox},
+\autoref{graph:unshieldedTestPaper} and \autoref{graph:shieldedTestPaper} the
+sensor was able to determine the distance with better precision when it is
+shielded and the object was in the landscape position. 
 
 \subsection{Infrared}
 The test of the infrared sensor was not able to be conducted since there were
