--- a/sections/HWSelection/Sensors/SensorTest.tex
+++ b/sections/HWSelection/Sensors/SensorTest.tex
@@ -1,3 +1,5 @@
+\chapter{Sensor Testing}
+
 \section{Sensor Testing} 
 To find out which sensors are the optimal sensors for the project,
 this chapter will be used to test the different sensors. The testing of the
