--- a/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
+++ b/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
@@ -4,8 +4,8 @@ real-time systems concerning how scheduling and deadlines work and machine
 intelligence.\fix{}{Add more text}
 
 \section{Embedded Systems}
-An embedded system is a device with limited resources both in terms of computer
-power and how much memory it has. They are used everywhere to do small task and
+An embedded system is a device with limited resources both in terms of computing
+power and how much memory it has available. They are used everywhere to do small task and
 jobs. It is difficult to give an exact definition of what an embedded system is,
 but a crude definition\citep[ch.1.1]{vahid1999embedded} is:\nl
 
@@ -13,8 +13,8 @@ but a crude definition\citep[ch.1.1]{vahid1999embedded} is:\nl
 laptop, or  mainframe  computer.}\nl
 
 This means that embedded systems cover alot of different types of computers, for example
-the ABS-brakes in a modern car, the cash registers in stores, washing machines, etc.
-Their requirements can therefore differ alot between systems, although they do
+the ABS-brakes in a modern car, the cash registers in retailstores, washing machines, etc.
+The requirements can therefore differ alot between systems, although they do
 share some characteristics:
 
 \begin{enumerate}
@@ -22,15 +22,15 @@ share some characteristics:
   function which is executed repeatedly.
   \item \textbf{Tightly constrained}: All systems have some limits, but embedded
   systems due to their nature are much more tightly constrained when it comes to
-  cost, size, performance and power. These constaints are linked in the sense
+  cost, size, performance and power. These constraints are linked in the sense
   that an increase in one area directly affects the other areas, see
   \autoref{ESConstraints}.
   \item \textbf{Reactive and realtime}: A lot of embedded systems also has to
   react and respond to certain input. If this input has a deadline, it is in
   fact a real-time system.
 \end{enumerate}
-
-\figx{ESConstraints}{How the constaint can depend on each
+	
+\figx{ESConstraints}{How the constraints depend on each
 other}{}
 
 \fix{write about microcontroller?}{Depending on whether or not it is necessary
