--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -59,7 +59,7 @@ Based on a set of criteria the two prototyping platforms will be evaluated, and 
   In reality, most of the modules needed for the project such as sensors is available for both platforms.
   \item Integration of modules - The Lego NXT peripherals are built and configured to be used with a Lego NXT brick, thus resulting in a much simpler
   and streamlined process being almost plug-and-play. The Arduino often requires more work in regards to integrating the modules with the board.
-  \item Customization - Based on this criteria the Arduino is considered to be more flexible, because of the more widespread use of Arduino's, the likelyhood of someone
+  \item Customization - Based on this criteria the Arduino is considered to be more flexible. Because of the more widespread use of Arduino's, the likelyhood of someone
   already having constructed what you need is big. There is also the option for tampering further with the modules with a breadboard and the electrical components such as resistors, capacitors, etc.
   \item Building - In this regard the NXT wins big, since it can be combined with the entire Lego Technics system in constructing a technical platform. Constructing a turret with arduino would
   require us to manufacture the parts necessary for the cannon. The Lego also has the advantage that the various pieces can be combined in a lot of ways, allowing change in the design without necessarily needing new parts.
@@ -67,13 +67,13 @@ Based on a set of criteria the two prototyping platforms will be evaluated, and 
 
 Since the university provides the platforms the cost aspect isn't deemed as a vital factor. As mentioned before the parts needed for the project
 are available for both platforms so this is not the deciding factor either. When choosing the platform the group focused on the following criteria:
+\begin{itemize}
 
--Building - Since a physical turret will have to be constructed, in order to simplify the mechanical process and allowing further focus on the software aspect.\nl
--Integration of modules - As before, the group doesn't want to spend too much time on the physical aspect of construction so things like soldering and integration of modules
-is inconvenient.\nl
--I/O Ports - the number of available I/O Ports needs to be able to support a range of sensors and some motors. For this reason the NXT is a little limiting,
-compared to the arduino, although the use of a multiplexer can allow expansion of existing ports.
-
+  \item Building - Since a physical turret will have to be constructed, in order to simplify the mechanical process and allowing further focus on the software aspect.
+  \item Integration of modules - As before, the group doesn't want to spend too much time on the physical aspect of construction so things like soldering and integration of modules
+is inconvenient.
+  \item I/O Ports - the number of available I/O Ports needs to be able to support a range of sensors and some motors. For this reason the NXT is a little limiting, compared to the arduino, although the use of a multiplexer can allow expansion of existing ports.
+\end{itemize}
 In conclusion the group has chosen the Lego NXT platform for use in the project based on the following criteria:
 \begin{itemize}
   \item Easier to physically build a prototype with lego parts
