--- a/sections/PhysTheory/AirResDiscussion.tex
+++ b/sections/PhysTheory/AirResDiscussion.tex
@@ -1,4 +1,4 @@
-\section{Air Resistance}\label{AirResDisc}
+\section{Air Resistance (Not Done)}\label{AirResDisc}
 For the purpose of calculating the trajectory of the projectile in \autoref{} a
 formula has been used which does not account for the effect of air resistance.
 This section will be used to discuss why this is the case, and to argue why the
