The fixes to platform choice and embedded after a readthrough

--- a/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
+++ b/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
@@ -1,7 +1,7 @@
 \chapter{System Description}
-This chapter will be used to look at embedded systems and their limits,
+This chapter is used to look at embedded systems and their limits,
 real-time systems concerning how scheduling and deadlines work and machine
-intelligence.\fix{}{Add more text}
+intelligence.\fix{}{Add more text and better description of what will be done}
 
 \section{Embedded Systems}
 An embedded system is a device with limited resources both in terms of computing
