--- a/sections/PhysTheory/ProjectileMotion.tex
+++ b/sections/PhysTheory/ProjectileMotion.tex
@@ -64,22 +64,23 @@ $\mathbf{a=45\ degrees}$ such that $\mathbf{sin(45)\approx 0.71}$ and
 $\mathbf{cos(45)\approx 0.71}$.
 
 The relation between fireing angle and travelled distance is exemplified in
-\autoref{ProjMot}.
+\autoref{ProjMot.png}.
 
-\figx[0.25]{ProjMot}{Distance relative to angle of fire.}
+\figx[0.25]{ProjMot.png}{Distance relative to angle of fire.}
 
 \subsection{Projectile Air Time}
 When it comes to hitting a target in motion we need another crucial information,
 namely how long a given projectile takes to reach its target.
-In \autoref{CalcDist} we determined a formula for calculating the distance at
-which the projectile would hit the ground. As we have already determined the
-distance, we can simply use the formula described in \autoref{slength}, namely:
+In \autoref{CalcDist} we determined a formula for determining the distance on
+the $\mathbf{x-axis}$ at which the projectile would hit the ground. As we
+already determined a value for $\mathbf{x}$, we can simply use
+\autoref{slength}, namely:
 \begin{equation}
 x=v_0*cos(a)*t
 \end{equation}
-By isolating for the time in this formula, we can determine how long it takes
-for at given projectile to reach the target. This results in the following
-formula:
+By isolating for the time in this formula, we can use our value for $\mathbf{x}$
+to determine how long it takes for at given projectile to reach the target. This
+results in the following formula:
 \begin{equation}\label{TimeEq}
 t=\frac{x}{v_0*cos(a)}
 \end{equation}
