--- a/sections/PhysTheory/ProjectilePhysics.tex
+++ b/sections/PhysTheory/ProjectilePhysics.tex
@@ -1,11 +1,20 @@
 \chapter{Projectile Physics}\label{ProjPhys}
-In order to accurately fire a projectile, there is a number of information which
-will be required. This information mainly consists of theorems relating to
-projectile motion and the trajectory of projectiles under the influence of
-earths gravity.\nl
+In order to accurately fire a projectile, we are going to need knowledge about
+the theory of projectile motion. This knowledge comes in the form of theorems
+relating to the trajectory of projectiles under the influence of earths
+gravity.
 
-This chapter will be used to present, explain and discuss the physical
-phenomena which are relevant to the motion of the cannons projectile.
+% In order to accurately fire a projectile, there is a number of information which
+% will be required. This information mainly consists of theorems relating to
+% projectile motion and the trajectory of projectiles under the influence of
+% earths gravity.\nl
+
+Due to the importance that these physical phenomena have in relation the the
+project, this chapter will be used to present, explain and discuss all relevant
+theory.
+
+% This chapter will be used to present, explain and discuss the physical phenomena
+% which are relevant to the motion of the cannons projectile.
 
 \input{sections/PhysTheory/ProjectileMotion.tex}
 \input{sections/PhysTheory/AirResDiscussion.tex}
