Ultrasonic sensor test düne

--- a/sections/HWSelection/Sensors/SensorTest.tex
+++ b/sections/HWSelection/Sensors/SensorTest.tex
@@ -8,7 +8,7 @@ sensors will also be used to find out how precise they are.\nl
 First the testing methodology will be explained, then this methodology
 will be used to devise tests for the different sensors. 
 
-\subsection{Testing Methodology}\label{hej}
+\subsection{Testing Methodology}
 The testing will be divided into to two parts, one part is testing the two
 distance sensors and the second part is testing the camera. 
 
@@ -36,13 +36,18 @@ Landscape}{Results with a shielded sensor and a A3 Paper}{shieldedTestPaper}
 [cm]}{unshieldedPaperStanding,unshieldedPaperLandscape}{Paper Standing, Paper
 Landscape}{Results with a unshielded sensor and a A3 Paper}{unshieldedTestPaper}
 
-This sensor has a range of 0 to 255 cm and will not be too limiting in terms of
-how far the object can be from the canon for it to hit the object.\nl
+This sensor has a range of 0 to 255 cm and will not be too limiting factor
+compared to how far the turret is able to shoot.\nl
 
 As seen in \autoref{graph:shieldedTestBox}, \autoref{graph:unshieldedTestBox},
 \autoref{graph:unshieldedTestPaper} and \autoref{graph:shieldedTestPaper} the
 sensor was able to determine the distance with better precision when it is
-shielded and the object was in the landscape position. 
+shielded and the object was in the landscape position. \nl
+
+It can then be concluded that the shielded sensor performed a lot better than
+the unshielded, it can also be concluded that the placement of the object can
+have a big impact. This is due to the fact that the sensor does not have a very
+large field of view. Therefore, the object should be wider rather than taller. 
 
 \subsection{Infrared}
 The test of the infrared sensor was not able to be conducted since there were
