--- a/sections/PhysTheory/TargetPhys.tex
+++ b/sections/PhysTheory/TargetPhys.tex
@@ -1,1 +1,7 @@
 \section{Target Requirements}\label{TargetReq}
+The purpose of the project is to create an automated turret, which is capable of
+hitting a target in motion. As the project have a number of imposed limitations,
+such as a small variety of available sensors and limited processing power and
+memory, it is important to consider the design of the target in relation to the
+limitations of the turret. As such, this section will be used to discuss and
+explain the physical attributes of the chosen target.
