Camera tracking almost done, needs a bit more on the functionality

--- a/sections/HWSelection/Sensors/SensorTest.tex
+++ b/sections/HWSelection/Sensors/SensorTest.tex
@@ -81,4 +81,6 @@ object/objects being tracked are.
 The camera also has the ability to track up to 8 different objects. \nl
 
 The setup of the camera is quite simple and is done using a computer, to setup
-which color it is suposed to track. The process of choosing the color is done 
+which color it is suposed to track. The process of choosing the color is done
+using some software that comes with the camera, here a colormap is made which
+tells the preprocessor on the camera which colors to track. 
