--- a/sections/Requirements/Requirements.tex
+++ b/sections/Requirements/Requirements.tex
@@ -29,17 +29,13 @@ The turret needs to be able to reliable hit a target with a constant speed.
 The turret needs to be able to reliable hit \fix{60\%}{need a number to aim for}
 a target.
 
-The turret needs to be able to hit prioritize between several targets.
+The turret is able to prioritize between several targets.
 
-The turret needs to be able to reliably hit a target with a variable speed.
+The turret is able to reliably hit a target with a variable speed.
 
+The target is atleast 10cm x 10cm.\nl
 
-
-The turret is able to prioritize and handle multiple targets.\nl
-
-The target has a size of 10cm x 10cm.\nl
-
-The target is able to move at a constant speed of up 2.5 m/s.\nl
+The target is able to move at a constant speed of up 0.8 m/s.\nl
 
 The target is able to accelerate and decelerate.\nl
 
