--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -15,6 +15,10 @@
 %		DC v. Servo
 %	``Final'' choise of hardware
 
+\input{sections/Requirements/ProblemStatement.tex}
+\input{sections/Requirements/Requirements.tex}
+
+
 \part{Testing}
 \input{sections/PhysTheory/ProjectilePhysics.tex}%Physics of shooting
 \input{sections/Testing/Testing.tex}%Physics of shooting
