- Added a source  - Translated infrared sensor section

--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -22,3 +22,13 @@
   year={2008},
   publisher={OUP Oxford}
 }
+
+@MISC{Ultrasonic_sensor,
+  author = {},
+  title = {{Ultrasonic Sensors}},
+  year = {},
+  note = {seen 11/10/2016},
+  howpublished = {\url{http://www.education.rec.ri.cmu.edu/previews/nxt_products/robotics_eng_vol_1/preview/content/reference/helpers/ultrasonic.htm}}
+}
+
+
