--- a/sections/Introduction.tex
+++ b/sections/Introduction.tex
@@ -30,7 +30,7 @@ hitting a moving target.}
 \end{minipage}
 \end{center}
 
-Based on the desite to learn from the experience, as well as the interesting
+Based on the desire to learn from the experience, as well as the interesting
 topic and possible challenges, this proposal was chosen as topic for this
 semester project. To further define the challenge, Ren\'e added that the target
 should:
