--- a/sections/Requirements/ProblemDomain.tex
+++ b/sections/Requirements/ProblemDomain.tex
@@ -1,6 +1,31 @@
 \chapter{Problem Domain}
-Fluff and red thread
-(Go indepth with the phases)
+As the project has no actual customer to set the requirements for the project,
+the product requirements will be based on the Ren\'e's proposed challenge and
+the educational goals for the semester.\nl
+
+In this chapter an ideal scenario is constructed in order to visualize how an
+autonoumus turret might behave. The scenario is then analyzed in order to
+understand which problems are present, and finally a summary is given.
+
+
+
+% As the only initial requirements is to be able to beat Ren\'e's challenge, 
+% 
+% it is
+% thus possible to construct an ideal scenario in order to better visualize how it
+% might work.
+% 
+% it is
+% possible to construct
+% 
+%  Based on our initial problem we can create a number of ideal
+% scenarios, which can be used to analyze what problems could occur while the turret operates. 
+% 
+% 
+% 
+% 
+% 
+% Fluff and red thread (Go indepth with the phases)
 
 
 \section{Ideal Scenario}
