--- a/setup/preamble.tex
+++ b/setup/preamble.tex
@@ -20,6 +20,7 @@
 \usepackage{amsmath}
 \usepackage{longtable}
 \usepackage{pgfplots}
+\usepackage{pgfplotstable} 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Language, Encoding and Fonts
 % http://en.wikibooks.org/wiki/LaTeX/Internationalization
