--- a/sections/Appendix/Physics/DistanceTest.tex
+++ b/sections/Appendix/Physics/DistanceTest.tex
@@ -26,3 +26,4 @@ The resulting data from these tests consists of measured angles and their
 respective distance. This is complemented with the average distance for each
 angle and the calculated variance.
 
+\dataTable{AngleTest_1}{Much data}{VeryTable}
